--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -7,12 +7,26 @@
     <title>Document</title>
 </head>
 <body>
+    <hr>
     <div class="footer-content">
-        <hr>
-    <h1>Contacto</h1>
-    <h2>Contacto</h2>
-    <h3>Contacto</h3>
-    <P>Acá van los datos, esto es una prueba de como se vería el footer</P>
+        <div class="contact-one">
+            <h2>Contacto 1</h2>
+            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio facere magni eligendi deserunt perferendis odit
+                libero nam voluptas quae rem laborum consectetur ipsa repellendus culpa similique, ratione quibusdam maxime iure.
+            </P>
+        </div>
+        <div class="contact-two">
+            <h2>Contacto 2</h2>
+            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio facere magni eligendi deserunt perferendis odit
+                libero nam voluptas quae rem laborum consectetur ipsa repellendus culpa similique, ratione quibusdam maxime iure.
+            </P>
+        </div>
+        <div class="contact-three">
+            <h2>Contacto 3</h2>
+            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio facere magni eligendi deserunt perferendis odit
+                libero nam voluptas quae rem laborum consectetur ipsa repellendus culpa similique, ratione quibusdam maxime iure.
+            </P>
+        </div>    
     </div>
     
 </body>
