--- a/src/app/componentes/nosotros/nosotros.component.html
+++ b/src/app/componentes/nosotros/nosotros.component.html
@@ -11,7 +11,10 @@
 
 <body>
     <div class="we-content">
-        <div class="history-content">
+        <div class="history-img">
+            <img src="../../../assets/imagenes/icons/historia.jpg" alt="">
+        </div> 
+        <div class="history-content">            
             <div class="history">
                 <h1>Nuestra historia</h1>
                 <p class="">
@@ -69,25 +72,10 @@
                     nam quisquam
                     sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
                 </p>
-                <p class="">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa,
-                    veritatis
-                    omnis
-                    nam quisquam
-                    sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eveniet laborum quibusdam ipsum
-                    facere
-                    dolorem dolores officiis? Laborum et, porro hic nobis ipsam repellat temporibus eius sit quod?
-                    Laboriosam,
-                    consequatur..50
-                </p>
             </div>
-            <div class="history-img">
-                <img src="../../../assets/icons/historia.jpg" alt="">
-            </div>           
         </div>
         <div class="mision">
-            <h1>Misión</h1>
+            <h1 id="mision">Misión</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, consequuntur nemo tempore
                 exercitationem
                 eos quaerat eius error! Porro nam iusto quam sed voluptatem optio dolorum perspiciatis aperiam
@@ -101,7 +89,7 @@
                 aliquid facere repellat officiis rerum.</p>
         </div>
         <div class="vision">
-            <h1>Visión</h1>
+            <h1 id="vision">Visión</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, consequuntur nemo tempore exercitationem
                 eos quaerat eius error! Porro nam iusto quam sed voluptatem optio dolorum perspiciatis aperiam
                 similique, enim, tempore quidem neque necessitatibus accusamus earum delectus non impedit fuga tempora
@@ -112,7 +100,7 @@
                 aliquid facere repellat officiis rerum.</p>
         </div>
         <div class="mega">
-            <h1>Mega</h1>
+            <h1 id="mega">Mega</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, consequuntur nemo tempore exercitationem
                 eos quaerat eius error! Porro nam iusto quam sed voluptatem optio dolorum perspiciatis aperiam
                 similique, enim, tempore quidem neque necessitatibus accusamus earum delectus non impedit fuga tempora
