--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,10 @@
     <title>IwamiPerzonalizados</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!---FONT--->
+    <link rel="icon" type="image/x-icon" href="favico.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <!---BOOTSTRAP--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
