--- a/src/app/componentes/nosotros/nosotros.component.html
+++ b/src/app/componentes/nosotros/nosotros.component.html
@@ -12,7 +12,7 @@
 <body>
     <div class="we-content">
         <div class="history-img">
-            <img src="../../../assets/imagenes/icons/historia.jpg" alt="">
+            <img src="../../../assets/imagenes/icons/IWAMI NEGRO.png" alt="">
         </div> 
         <div class="history-content">            
             <div class="history">
@@ -54,23 +54,6 @@
                     perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae
                     ad.
                     Est, libero.
-                </p>
-                <p class="">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa,
-                    veritatis
-                    omnis
-                    nam quisquam
-                    sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus
-                    exercitationem ratione,
-                    perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae
-                    ad.
-                    Est, libero.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa,
-                    veritatis
-                    omnis
-                    nam quisquam
-                    sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
                 </p>
             </div>
         </div>
